now the align is correct

--- a/html_css/css_nav/style.css
+++ b/html_css/css_nav/style.css
@@ -53,6 +53,8 @@ body::-webkit-scrollbar-thumb {
     padding: 0;
     margin: 0;
     height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .nav-li {
